# soma-io

./: .lgtm.com  CMakeLists.txt  README  README.md  config-app-local.template  config-local.template  movetosoma.org  project_info.cmake  soma-io.bcg
sphinx/: conf.py  (+1 more)
src/libcartobase/: CMakeLists.txt
src/libcartobase/algorithm/: algorithm.cc
src/libcartobase/allocator/: allocator.cc  allocator.h  mappingcopy.cc  mappingcopy.h  mappingro.cc  mappingro.h  mappingrw.cc  mappingrw.h  meminfo.cc
src/libcartobase/config/: cartobase_config.h  config.h.in  info.cc  info.h  paths.cc  paths.h  verbose.h  version.h.in
src/libcartobase/containers/: allocatedvector.h  nditerator.h
src/libcartobase/datasource/: bufferdatasource.cc  bufferdatasource.h  chaindatasource.cc  chaindatasource.h  cstreamdatasource.cc  cstreamdatasource.h  datasource.cc  datasource.h  fddatasource.cc  fddatasource.h  filedatasource.cc  filedatasource.h  filteringdatasource.cc  filteringdatasource.h  streamdatasource.cc  streamdatasource.h
src/libcartobase/doc/: cartobase_doc.h  object_doc.h
src/libcartobase/exception/: assert.cc  assert.h  file.h  ioexcept.cc  ioexcept.h
src/libcartobase/getopt/: getopt.h
src/libcartobase/io/: asciidatasourcetraits.cc  asciidatasourcetraits.h  creator.h  datasourceinfo.cc  datasourceinfo.h  formatchecker.h  formatdictionary.cc  formatdictionary.h  formatdictionary_d.h  formatreader.h  formatreader_d.h  formatwriter.h  headertranslator.h  itemreader.h  itemwriter.h  minfXML2.cc  minfXML2.h  pythonformatchecker.cc  pythonformatchecker.h  pythonformatreader.cc  pythonformatreader.h  pythonformatwriter.cc  pythonformatwriter.h  reader.h  reader_d.h  reader_object.cc  readeralgorithm.cc  readeralgorithm.h  writer.cc  writer.h  writer_d.h  xmlformatchecker.cc  xmlformatchecker.h  xmlformatreader.cc  xmlformatreader.h
src/libcartobase/object/: achecker.cc  achecker.h  areader.cc  areader.h  attributed.h  awriter.cc  awriter.h  headered.cc  headered.h  object.cc  object.h  object_d.h  object_internal.h  object_usual.cc  object_vector.cc  property.cc  property.h  pythonreader.cc  pythonreader.h  pythonreader_d.h  pythonwriter.cc  pythonwriter.h  pythonwriter_d.h  sreader.cc  syntobject.h
src/libcartobase/plugin/: plugin.cc  plugin.h
src/libcartobase/smart/: mutexrcptr.h  rcptr.h  refwrapper.h  scopedptr.h  sharedptr.h  smartdoc.h  weakobject.cc  weakptr.h
src/libcartobase/stream/: cuifstream.cc  directory.cc  fdinhibitor.cc  fdinhibitor.h  fileutil.cc  fileutil.h  fistreambuf.cc  fistreambuf.h  fostreambuf.cc  stringutil.cc  stringutil.h
src/libcartobase/thread/: cpu.cc  exclusiveContext.cc  exclusiveContext.h  loopContext.cc  loopContext.h  loopThread.cc  loopThread.h  mutex.cc  mutexprivatepthread.h  semaphore.cc  thread.cc  threadedLoop.cc  threadedLoop.h
src/libcartobase/type/: byte_order.cc  byte_order.h  conversion.h  converter.cc  converter.h  converter_d.h  datatypeinfo.h  datatypetraits.cc  datatypetraits.h  limits_gcc3.h  string_conversion.cc  string_conversion.h  types.h  voxelhsv.h  voxelrgb.h  voxelrgb_d.h  voxelrgb_decl.h  voxelrgb_def.h  voxelrgba.h  voxelrgba_d.h  voxelrgba_decl.h  voxelrgba_def.h  voxelvalue.cc  voxelvalue.h  voxelvalue_d.h
src/libcartobase/uuid/: uuid.cc  uuid.h
src/libcartobase/zoolib/: ZDebug.h  atomiccount.h  zconfigtest.h
src/libsoma-io/: CMakeLists.txt  libsomaio.pro  rcobject.cpp
src/libsoma-io/allocator/: allocator.cc  allocator.h  mappingcopy.cc  mappingcopy.h  mappingro.cc  mappingro.h  mappingrw.cc  mappingrw.h  meminfo.cc
src/libsoma-io/cartodata/: reader_volume.cc  volume.cc  volume.h  volume_d.h  volumeformatreader.cc  volumeformatreader.h  volumeformatreader_d.h  volumeformatreader_gis.cc  volumeformatwriter.cc  volumeformatwriter.h  volumeformatwriter_d.h  volumeformatwriter_gis.cc  volumeoperators.h  volumeproxy.h  volumeproxy_d.h  volumeutil.h  volumeutil_d.h  volumeview.cc  volumeview.h  writer_volume.cc
src/libsoma-io/checker/: achecker.cc  achecker.h  formatchecker.h  jsonformatchecker.cc  jsonformatchecker.h  pythonformatchecker.cc  pythonformatchecker.h  xmlformatchecker.cc  xmlformatchecker.h
src/libsoma-io/config/: config.h.in  info.cc  info.h  plugins.cc  soma_config.h  version.cc  version.h.in
src/libsoma-io/datasource/: bufferdatasource.cc  bufferdatasource.h  chaindatasource.cc  chaindatasource.h  cstreamdatasource.cc  cstreamdatasource.h  datasource.cc  datasource.h  datasourcelist.cc  datasourcelist.h  fddatasource.cc  fddatasource.h  filedatasource.cc  filedatasource.h  filteringdatasource.cc  filteringdatasource.h  streamdatasource.cc  streamdatasource.h
src/libsoma-io/datasourceinfo/: datasourcecapabilities.cc  datasourcecapabilities.h  datasourceinfo.cc  datasourceinfo.h  datasourceinfoloader.cc  datasourceinfoloader.h
src/libsoma-io/doc/: getopt_doc.h  io_doc.h  somaio_doc.h
src/libsoma-io/getopt/: getopt.cc  getopt.h
src/libsoma-io/image/: imagereader.cc  imagereader.h  imagereader_d.h  imagewriter.cc  imagewriter.h  imagewriter_d.h  voxelhsv.h  voxelrgb.h  voxelrgb_d.h  voxelrgba.h  voxelrgba_d.h  voxelvalue.cc  voxelvalue.h  voxelvalue_d.h
src/libsoma-io/io/: formatdictionary.cc  formatdictionary.h  formatdictionary_d.h  reader.h  reader_d.h  reader_object.cc  readeralgorithm.cc  readeralgorithm.h  scaledcoding.cc  scaledcoding.h  writer.cc  writer.h  writer_d.h
src/libsoma-io/other/: asciidatasourcetraits.cc  creator.h  minfXML2.cc
src/libsoma-io/plugin/: plugin.cc  plugin.h
src/libsoma-io/plugingis/: gisformatchecker.cc  gisformatchecker.h  gisimagereader.cc  gisimagereader.h  gisimagereader_d.h  gisimagewriter.cc  gisimagewriter.h  gisimagewriter_d.h
src/somadicom/: CMakeLists.txt  dicom.pro
src/somagis/: CMakeLists.txt  gis.pro
src/somamif/: CMakeLists.txt
src/somaminc/: CMakeLists.txt
src/somanifti/: CMakeLists.txt
src/somaopenslide/: CMakeLists.txt  openslide.pro
src/somatiff/: CMakeLists.txt
src/tests/: CMakeLists.txt
src/use_cases/: CMakeLists.txt  process_image_with_borders.cpp  process_image_with_memory_mapping.cpp  write_an_image.cpp
(+475 files in other folders)
